Re-adapting using factory